[gd_scene load_steps=2 format=3 uid="uid://b4auljklap6ql"]

[ext_resource type="Script" uid="uid://dmeu5r50vi4pc" path="res://equip/EquipSlot.gd" id="1_tt47i"]

[node name="EquipSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1820.0
offset_bottom = -980.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt47i")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SlotNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HighlightBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickableArea" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="ClickableArea" to="." method="_on_button_pressed"]
